--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <h1 class="title">Smoking</h1>
         <div><a href="BarGraphAllIn.html">Bar Chart 1</a></div>
         <div><a href="Bar2.html">Bar Chart2 </a></div>
+          <div><a href="diseases_bubbles.html">Disease Bubbles</a></div>
     </div>
 
     <div class="body">
@@ -98,6 +99,7 @@
 
 </body>
 </html>
+
 
 
 
