--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
     <div class="header">
         <div><a href="Circles.html">Smoking circle</a></div> <!-- anchor tag, works as a hyperlink -->
         <h1 class="title">Smoking</h1>
-        <div><a href="BarGraphAllIn.html">Bar Chart 1</a></div>
-        <div><a href="Bar2.html">Bar Chart2 </a></div>
+        <div><a href="BarCharts">Bar Chart 1</a></div>
           <div><a href="diseases_bubbles.html">Disease Bubbles</a></div>
     </div>
 
@@ -99,6 +98,7 @@
 
 </body>
 </html>
+
 
 
 
