--- a/BarCharts.html
+++ b/BarCharts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Select Bar Chart - Smoking as a Risk Factor</title>
+    <title>Select Bar Chart - Diseases and risk factors related to smoking</title>
     <style>
         * {
             margin: 0;
@@ -101,10 +101,8 @@
 </head>
 <body>
     <div class="header">
-        <div><a href="Circles.html">Smoking circle</a></div>
+        <div><a href="BarCharts.html">Smoking circle</a></div>
         <h1 class="title">Smoking</h1>
-        <div><a href="index.html">Home</a></div>
-        <div><a href="diseases_bubbles.html">Disease Bubbles</a></div>
     </div>
     
     <div class="body">
@@ -114,12 +112,12 @@
         <div class="chart-selector">
             <div class="chart-option">
                 <a href="BarGraphAllIn.html" class="chart-button">Bar Chart 1</a>
-                <p class="chart-description">View the first bar chart visualization</p>
+                <p class="chart-description">This bar chart will display the number of diseases related to smoking for each risk factor related to smoking. </p>
             </div>
             
             <div class="chart-option">
                 <a href="Bar2.html" class="chart-button">Bar Chart 2</a>
-                <p class="chart-description">View the second bar chart visualization</p>
+                <p class="chart-description">This bar chart will display the number of symptoms related to smoking for each disease related to smoking.</p>
             </div>
         </div>
     </div>
