--- a/BarCharts.html
+++ b/BarCharts.html
@@ -101,7 +101,7 @@
 </head>
 <body>
     <div class="header">
-        <div><a href="BarCharts.html">Back</a></div>
+        <div><a href="index.html">Homepage</a></div>
         <h1 class="title">Smoking</h1>
     </div>
     
