--- a/Bar2.html
+++ b/Bar2.html
@@ -121,7 +121,7 @@
 </head>
 <body>
     <div class="header">
-        <div><a href="index.html">Homepage</a></div>
+        <div><a href="BarCharts.html">Back</a></div>
         <p>For each disease linked to smoking, all the symptoms of that disease were extracted. Each symptom is linked to multiple disease. Click on a disease to see its symptoms.</p>
         <h1 class="title">Symptoms per Disease</h1>
         <div></div>
