--- a/BarGraphAllIn.html
+++ b/BarGraphAllIn.html
@@ -121,7 +121,7 @@
 </head>
 <body>
     <div class="header">
-        <div><a href="index.html">Homepage</a></div>
+        <div><a href="BarCharts.html">Back</a></div>
         <h1 class="title">Diseases per Risk Factor</h1>
         <div></div>
     </div>
