--- a/Circles.html
+++ b/Circles.html
@@ -60,6 +60,14 @@
           opacity: 0;
           transition: opacity 0.2s;
         }
+
+#loading-message {
+            text-align: center;
+            font-size: 18px;
+            color: #333;
+            margin: 20px 0;
+        }
+
     </style>
 </head>
     
